# eeglib

./: .gitignore  LICENSE.txt  eeg.py  helpers.py  pyproject.toml  readme.md  requeriments.txt  setup.py
EEGlib_docs/: Makefile
EEGlib_docs/source/: conf.py  features.rst
Examples/: .~lock.fake_EEG_signal.csv#  basicExample.py  usingIterations.py  usingWindows.py  usingWrapper.py
docs/html/: .buildinfo  eeg.html  genindex.html  helpers.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_images/: inheritance-176739e28a92f5ee7111499e888aef06516575bf.png.map  inheritance-43cfe9d8e581c387167b25c7525d0ef880cebd4b.png.map  inheritance-726ed2cbdffd03a60088a3d130352a1426a449ab.png.map  inheritance-77f7ffcc13bb09db7191b416dad931f3eabf84a0.png.map  inheritance-babb6368ae5f6c2d6696c3e72b85145fe3df4166.png.map
docs/html/_sources/: helpers.txt  (+1 more)
docs/source/: conf.py  wrapper.rst
eeglib/: __init__.py  auxFunctions.py  eeg.py  features.py  helpers.py  preprocessing.py  wrapper.py
eeglib/tests/: fake_EEG_signal_no_names.csv  test_BandPower.py  test_DFA.py  test_HFD.py  test_LZC.py  test_MSE.py  test_PFD.py  test_SL.py  test_auxFunctions.py  test_bandpassFilter.py  test_eeg.py  test_helpers.py  test_sampEn.py  test_wrapper.py
eeglib_docs/: make.bat  requeriments.txt
eeglib_docs/source/: conf.py  index.rst
src/eeglib/: eeg.py  helpers.py  preprocessing.py  wrapper.py
tests/: .coveragerc  fake_EEG_signal.csv  fake_EEG_signal.edf  test_HFD.py  test_HjorthParameters.py  test_LZC.py  test_eeg.py  test_sampEn.py  test_wrapper.py
